fix collapse.js

--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -20,3 +20,9 @@
 .banner-text {
   padding: 15px;
 }
+
+@media (max-width: 850px) {
+  .collapse-banner {
+    max-width: 450px;
+  }
+}
