--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,5 @@ body {
 @media (max-width: 850px) {
   .container {
     max-width: 500px;
-    margin: 0 auto;
   }
 }
